Selection FE: fix CSS regression on selections listing grid, on mobile. Closes #248

--- a/resources/assets/js/Selection/MySelections.scss
+++ b/resources/assets/js/Selection/MySelections.scss
@@ -44,6 +44,7 @@
 /* The default state when the user isn't authenticated. */
 .MySelections__unauthenticated {
   @extend %selections-grid;
+  display: block;
   margin-top: 30px;
   margin-bottom: 30px;
 
